# ME5413_Final_Project

./: .gitignore  README.md  requirements.txt
junk/: error_fixes.md  note.txt
maps/: lvl1_gmapping.yaml  lvl2_gmapping.yaml
src/jackal_description/urdf/: accessories.urdf.xacro  jackal.gazebo  jackal.urdf.xacro
src/me5413_group9/: CMakeLists.txt  lv2 room coordinates.txt  package.xml  spawn_loc.txt
src/me5413_group9/charts/: Mapping task.drawio
src/me5413_group9/include/: robot.hpp  robot_control.hpp  template_matching.hpp
src/me5413_group9/launch/: explore.launch  gmapping.launch
src/me5413_group9/maps/: level_1.yaml  lvl1_and_ramp_gmapping.yaml  lvl1_gmapping.pgm
src/me5413_group9/scripts/: box_counter.py  save_features.py
src/me5413_group9/src/: apf_gap_detection.cpp  artificial_potential_field.cpp  circle_fitting.cpp  circle_fitting_test.cpp  corridor_navigator.cpp  cv_control.cpp  ferdi-stuff.cmake  lvl2.cpp  main.cpp  main3.cpp  phase_2.cpp  phase_2_slope.cpp  points_to_scan.cpp  reader.cpp  show_img.cpp
src/me5413_group9/src/common/: robot.cpp  robot_control.cpp  template_matching.cpp
src/me5413_group9/src/sensors/: laserscan_from_lidar.cpp  wall_scan.cpp
src/me5413_world/config/: dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
src/me5413_world/config/map_param/: local_costmap_params.yaml
src/me5413_world/config/planners/: dwa_local_planner_params.yaml  move_base_params.yaml  teb_local_planner_params.yaml
src/me5413_world/launch/: mapping.launch  navigation.launch  world.launch
src/me5413_world/launch/include/: amcl.launch  move_base.launch
src/me5413_world/maps/: level_1.yaml  lvl2_improved.yaml  my_map.pgm
src/me5413_world/rviz/: navigation.rviz
src/me5413_world/scripts/: box_counter_node.py  box_detector_node.py
