<?xml version="1.0"?>
<package format="2">
  <name>me5413_group9</name>
  <version>0.0.0</version>
  <description>ME5413 Group 9 Main Project Package</description>

  <!-- Note: Several maintainers, I just made this initial commit -->
  <maintainer email="ferdinand.tonby.strandborg@gmail.com">Ferdi</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>

  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>roslib</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>pcl_ros</exec_depend>


</package>
